--- a/src/pages/categoryList/ui/categoryList.module.css
+++ b/src/pages/categoryList/ui/categoryList.module.css
@@ -1,10 +1,11 @@
+.container{
+}
+
 .topText {
     margin-top: 500px;
-    height: 500px;
+    height: 600px;
     background: linear-gradient(to bottom,  rgba(51, 51, 51, 1), rgba(24, 24, 24, 0.3));
-    padding-left: 180px;
-    padding-top: 50px;
-    margin-bottom: 50px;
+    padding: 50px 150px;
     color: white;
     font-size: 60px;
     font-family: 'Futura PT', sans-serif;
@@ -12,11 +13,9 @@
 
 .cards {
    padding-top: 50px;
-   padding-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-
 }
 
 .card {
@@ -43,32 +42,4 @@
     border: 1px solid white;
 }
 
-.allPark{
-    font-size: 40px;
-    border-radius: 30px;
-    background-color: #212121;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold;
-    padding: 30px;
-    transition: 0.1s;
-}
 
-.allPark:hover{
-    border:  solid white;
-    transition: 0.1s;
-    margin-bottom: 50px;
-}
-
-.next{
-    color: transparent !important;
-    -webkit-text-stroke: 1px rgb(255 255 255);
-    font-size: 60px;
-    font-weight: bold;
-}
-
-.last {
-    margin-bottom: 50px;
-}
