--- a/src/pages/autopark/Dropdown.scss
+++ b/src/pages/autopark/Dropdown.scss
@@ -1,40 +1,46 @@
-/* Basic styles for the dropdown */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
 .dropdown-btn {
-    background-color: #333;
+    background-color: #1c1b1b;
     color: white;
-    padding: 10px;
+    padding: 10px 15px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
 }
 
 .dropdown-btn::after {
-    content: '▼';
+    content: '';
     padding-left: 5px;
 }
 
 .dropdown-content {
     position: absolute;
+    top: 100%;
+    left: 0;
     background-color: white;
     min-width: 160px;
     max-height: 200px;
     overflow-y: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 1;
     display: none;
+    border-radius: 4px;
 }
 
 .dropdown-content label {
-    display: block;
-    padding: 8px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
     cursor: pointer;
     font-size: 14px;
-    color: black;
+    color: #333;
+    transition: background-color 0.3s ease;
 }
 
 .dropdown-content input[type="checkbox"] {
@@ -42,9 +48,13 @@
 }
 
 .dropdown-content label:hover {
-    background-color: #ddd;
+    background-color: #f0f0f0;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.dropdown-btn:hover {
+    background-color: #555;
 }
