--- a/src/components/cardetails/style.scss
+++ b/src/components/cardetails/style.scss
@@ -14,9 +14,15 @@
 .slick-center img {
     transform: scale(1.1);
 }
-
+.image-slide{
+    z-index: 1;
+    width: 942px;
+}
 .slick-slide:not(.slick-center) .image-slide {
+    top: 0;
+    position: absolute;
     opacity: 0.3;
+    z-index: -1;
 }
 
 
