--- a/src/pages/user/User.module.scss
+++ b/src/pages/user/User.module.scss
@@ -1,3 +1,61 @@
+.user{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+
 .container{
-  margin: 100px 200px;
+  padding: 10px 200px;
+  display: flex;
+  gap: 50px;
+}
+
+
+.title{
+  padding-top: 200px;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  .logo{
+    width: 205px;
+  }
+}
+
+
+.info{
+  display: flex;
+  flex-direction: column;
+  font-weight: lighter;
+  font-size: 40px;
+}
+.changeUser{
+  border-radius: 10px ;
+  text-align: center;
+  padding: 5px;
+  width: 40%;
+  font-size: 20px;
+  background-color: #0f5396;
+}
+
+.form {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+  input {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid white;
+    padding: 10px;
+  }
+
+  button {
+    width: 100%;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px;
+  }
 }
